--- a/index.html
+++ b/index.html
@@ -1,60 +1,233 @@
 <title>Electronic Eden</title>
+<link href='https://fonts.googleapis.com/css?family=Press Start 2P|Libre Barcode 39' rel='stylesheet'>
 <style>
+* {
+  box-sizing: border-box;
+}
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 10px;
+border: 1px #00FF21 solid;
+}
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+}
 body {
-	background: #000;
-	color: #95c821;
-	font: 17px Courier;
-}
-#box1 {
+    font: 12pt courier;
+color: #00FF21;
 background: #000;
-border: 2px solid #95c821;
-float: left;
-height: auto;
-width: auto;
-padding: 10px;
-margin-top: 300px;
-margin-left: 150px;
-}
-#box2 {
-background: #000;
-border: 2px solid #95c821;
-float: right;
-height: auto;
-width: auto;
-padding: 10px;
-margin-top: 300px;
-margin-right: 150px;
-}
-#box3 {
-background: #000;
-border: 2px solid #95c821;
-float: right;
-height: auto;
-width: auto;
-padding: 10px;
-margin-top: 300px;
-margin-left: 250px;
-margin-right: 150px;
 }
 h1 {
-	font: bold 20px Courier;
-	color: #000;
-	background: #95c821;
-	text-align: center;
-	text-transform: uppercase;
+font: 22pt 'press start 2p';
+color: #00FF21;
+text-align: center;
+}
+h2 {
+font: 15pt 'press start 2p';
+color: #000;
+background: #00FF21;
+display: hidden;
+}
+h2 b {
+font: 15pt arial;
+color: #000;
+animation-name: fade;
+animation-duration: 1s;
+animation-iteration-count: infinite;
+}
+@keyframes fade {
+from {color: #000;}
+to {color: transparent;}
+}
+h3 {
+font: 10pt 'press start 2p';
+color: #00FF21;
+text-align: center;
+text-transform: uppercase;
+}
+h4 {
+font: 10pt 'press start 2p';
+color: #00FF21;
+border-top: 2px #00FF21 solid;
+border-bottom: 2px #00FF21 solid;
+padding: 5px;
+display: hidden;
+text-align: center;
+}
+.left {
+	float: left;
+	padding: 10px;
+}
+.right {
+	float: right;
+	padding: 10px;
+}
+b {
+text-transform: uppercase;
+}
+c {
+font: 50pt 'libre barcode 39';
 }
 </style>
-<h1>CENTRAL OPERATION SYSTEM LOADING....█</h1>
 
-<div id="box1">
-<a href="/Steffan">Steffan</a>
+<h1>electronic eden</h1>
+<h2>Central Operation System Loading....<b>█</b></h2>
+<h2>Three Profiles Found...<b>█</b></h2>
+<h2>Loading Complete...<b>█</b></h2>
+
+
+<div class="row">
+  <div class="column"><h3>PROFILE_21789 steffan_phall</h3>
+<center><c>21789</c></center>
+<img src="http://i.imgur.com/8yYfNbL.gif" class="left"><br><b>online alias:</b> Starphal<br>
+<b>statistics:</b> average<br><b>age:</b> 23 years old<br><b>ethnic_origins:</b> 3. korean<br><b>languages:</b> english / korean<br><b>reputation:</b> 4. stories are all over the local area<br>
+<h4>dress & personal style</h4>
+<b>clothes:</b> high fashion clothes<br>
+<b>hairstyle:</b> light brown but dyed lilac, neat, short hair<br>
+<b>affectations:</b> prescription glasses
+<h4>background</h4>
+steffan was born in a poor family in the suburbs, getting involved with the gangs all the time, but his charisma was quite remarkable, starting connections and smuggling ring all over town he made a name for himself in an otherwise dire situation, but that came with a cost, many enemies where made, and in-search of help and protection, he was forced to sell himself to the company. now, he tries at any cost to get hide of that bond.
+<h4>family brackground</h4>
+<b>ranking:</b> 8. combat zone poor<br>
+<b>parents:</b> 7-10. something has happened to both parents<br><b>what_happened:</b> 8. they grew up in the street<br>
+<b>family_status:</b> 1-6. family in danger, has lost everything<br>
+<b>family_tragedy:</b> 7. family was involved in a long-term conspiracy<br>
+<b>childhood_environment:</b> 4. decaying, once upscale neighborhood
+<h4>life events</h4>
+<b>14_years_old:</b> made friends with the local booster gang<br>
+<b>15_years_old:</b> started a bussiness<br>
+<b>16_years_old:</b> friend murdered<br>
+<b>17_years_old:</b> enemy made<br>
+<b>18_years_old:</b> made a powerful connection<br>
+<b>19_years_old:</b> financial loss<br>
+<b>20_years_old:</b> happy love affair<br>
+<b>21_years_old:</b> nothing happened<br>
+<b>22_years_old:</b> was involved in an accident and still relives it in nightmares<br>
+<b>23_years_old:</b> enemy made
+<h4>motivations</h4>
+<b>personality_traits:</b> 4. moody, rash and headstrong<br>
+<b>person_they_value_most:</b> 3. lover<br>
+<b>what_they_value_most:</b> 9. having a good time<br>
+<b>how_they_feel_about_most_people:</b> 5. people are tools<br>
+<b>their_most_valued_possession:</b> 1. a weapon
+<h4>statistics</h4>
+<b>intelligence (INT):</b> 4<br>
+<b>reflexes (REF):</b> 5<br>
+<b>cool (CL):</b> 10<br>
+<b>technical_ability (TECH):</b> 3<br>
+<b>luck (LK):</b> 7<br>
+<b>attractiveness (ATT):</b> 10<br><br>
+<b>movement_allowance (MA):</b> 6<br>
+∟ <b>run:</b> 18 (0,17 seconds = 1 meter)<br>
+∟ <b>leap:</b> 4,5 meters<br><br>
+<b>empaty (EMP):</b> 5<br>
+∟ <b>humanity:</b> 50<br>
+<b>body_type (BT):</b> 8. strong<br>
+∟ <b>body_type_modifier (BTM):</b> -3
+<h4>career skills</h4>
+<b>special_ability:</b><br><br><b>street_deal:</b> 7<br>
+∟ the ability to locate people, information, etc. this is a higher form of <b>MAKING A CONNECTION</b>, instead of knowing only one person, they have connections everywhere. a successful use of street deal, allows to locate and acquire a desired person, place or thing.<br><br>
+<b>awareness/notice:</b> 5<br>
+∟ a skil of +5-7 allows you to spot fairly well hidden clues, notice small changes in expression, and fairly sophisticated attempts to "shadow" you.<br><br>
+<b>forgery:</b> 0<br>
+∟ the skil of copying and creating false documents and identifications. this skil may also be applied to the detection of same; if you can fake it, you can usually tell a fake as well.<br><br>
+<b>handgun:</b> 5<br>
+∟ you must have this skill to effectively use handguns of any type, including cyberwear types. a skil of +5-6 you are as skiled as most military officers or policemen.<br><br>
+<b>brawling:</b> 4<br>
+∟ the skill of fighting man to man with fist, feet and other parts of the body. brawling is not a trained skill - it is learned on the street by getting into a lot of fights.<br><br>
+<b>melee:</b> 4<br>
+∟ the ability to use knives, axes, clubs and other hand to hand weapons in combat.<br><br>
+<b>pick_lock:</b> 3<br>
+∟ the skil required to pick locks and break into sealed containers and rooms. a skill of +3 you can jimmy most simple locks.<br><br>
+<b>pick_pocket:</b> 1<br>
+∟ the required skill for picking pockets without being noticed, as well as "shoplifting" small items.<br><br>
+<b>intimidate:</b> 6<br>
+∟ the skill of getting people to do what you want by force of personality or physical coercion. a skill of +6-8 you can intimidate any moderate "tough guy".<br><br>
+<b>persuasion:</b> 5<br>
+∟ the ability to talk others into doing what you want. this may be used individually or on large groups. a skill of +5 you are a smooth talker of professional caliber.
 </div>
-
-
-<div id="box3">
-<a href="/Laela">Laela</a>
+  <div class="column"><h3>PROFILE_22630 LAELA_PIANOWSKI</h3>
+<center><c>22630</c></center>
+<img src="http://i.imgur.com/67QW4OZ.gif" class="left"><b>online alias:</b> Laepine<br>
+<b>statistics:</b> average<br><b>age:</b> 20 years old<br><b>ethnic_origins:</b> 4. soviet russia<br><b>languages:</b> english / russian<br><b>reputation:</b> 5. their name is recognized by others beyond the local area
+<h4>dress & personal style</h4>
+<b>clothes:</b> tech wear, earth-tones or black<br>
+<b>hairstyle:</b> white, long, straight<br>
+<b>affectations:</b> golden nose rings
+<h4>background</h4>
+since 3 years old, laela has been in the net, learning everything related to it quite quickly, at 13 she had her first chip, and so began her data empire, but, messing with the big guys so early in life wasn't a good idea. at only 15 she already had a few solos coming after her and her family, and in a single slip-up, she lost, not only part of her empire, but her family and both her legs. Now, owning her life to the company that smuggled the android legs she now uses for her, she navigates the net in search of the company that tried to end her.
+<h4>family background</h4>
+<b>ranking:</b> 3. corporate technician<br>
+<b>parents:</b> 7-10. something has happened to both parents<br>
+<b>what_happened:</b> 3. both parents were murdered<br>
+<b>family_status:</b> 1-6. family in danger, has lost everything<br>
+<b>family_tragedy:</b> 6. family was murdered/killed and they were the only survivor<br>
+<b>childhood_environment:</b> 2. spent in a safe corporate suburbia
+<h4>life events</h4>
+<b>14_years_old:</b> hunted by a large, state wide, corporation<br>
+<b>15_years_old:</b> made a powerful connection<br>
+<b>16_years_old:</b> parents murdered by unknown parties, going to hunt them down and make them pay<br>
+<b>17_years_old:</b> happy love affair<br>
+<b>18_years_old:</b> nothing happened<br>
+<b>19_years_old:</b> enemy made<br>
+<b>20_years_old:</b> made friends with the local booster gang
+<h4>motivations</h4>
+<b>personality_traits:</b> 9. intellectual and detached<br>
+<b>person_they_value_most:</b> 3. lover<br>
+<b>what_they_value_most:</b> 5. knowledge<br>
+<b>how_they_feel_about_most_people:</b> 4. hates almost everyone<br>
+<b>their_most_valued_possession:</b> 4. a photograph
+<h4>statistics</h4>
+<b>intelligence (INT):</b> 10<br>
+<b>reflexes (REF):</b> 5<br>
+<b>cool (CL):</b> 8<br>
+<b>technical_ability (TECH):</b> 8<br>
+<b>luck (LK):</b> 5<br>
+<b>attractiveness (ATT):</b> 6<br><br>
+<b>movement_allowance (MA):</b> 3<br>
+∟ <b>run:</b> 9 (28,8 seconds = 1 meter)<br>
+∟ <b>leap:</b> 2,25 meters<br><br>
+<b>empaty (EMP):</b> 5<br>
+∟ <b>humanity:</b> 50<br>
+<b>body_type (BT):</b> 4. weak<br>
+∟ <b>body_type_modifier (BTM):</b> -1
+<h4>career skills</h4>
+<b>special_ability:</b><br><br>
+<b>interface:</b> 9<br>
+∟ reflects the netrunner's ability to manipulate interface programs, and is the skill used when operating menu functions such as: <b>LOCATE_REMOTE</b>, <b>RUN_SOFTWARE</b>, <b>CONTROL_REMOTE</b>, <b>LDL_LINK</b>, <b>LOAD</b>, <b>CREATE</b> and <b>DELETE</b>.<br><br>
+<b>awareness/notice:</b> 2<br>
+∟ a skill of +2-4 you will usually spot small pieces of paper with notes on them, doors left ajar, and obvious expressions of lying or dislike.<br><br>
+<b>basic tech:</b> 3<br>
+∟ the required skill for building or repairing simple mechanical and electrical devices, such as car engines, television sets, etc. a skill of +3-5 you can fix minor car problems, repair basic wiring, etc<br><br>
+<b>education:</b> 2<br>
+∟ this skill is the equivalent of a basic public school education, allowing you to know how to read, write, use basic math, and know enough history to get by. a skill of +2 is equal to a high school equivalency.<br><br>
+<b>system knowledge:</b> 9<br>
+∟ basic knowledge of the geography of the net, it's lore and history, as well as knowledge of the important computer systems, their strengths and their weakness. a skill of +9 you know the entire net like the back of your hand, know the general layouts of the most important systems cold, and are aware of the layouts for the rest of them.<br><br>
+<b>cybertech:</b> 2<br>
+∟ the required skill for repairing and maintaining cyberwear. a skill of +2 you can keep your cyberwear tuned up and can replace it's power batteries.<br><br>
+<b>electronics:</b> 7<br>
+∟ the required skill for maintaining, repairing and modifying electronic instruments such as computers, personal electronics hardware, electronic security systems, cameras and monitors.<br><br>
+<b>programming:</b> 6<br>
+∟ the required skill to write programs and to re-program computer systems. a skill of +6-8 are considered to be professionals, who can build operating software, design mainframe systems, and hold down a steady job at your average silicon valley firm.
 </div>
-
-<div id="box2">
-<a href="/Norvelardo">Norvelardo</a>
+  <div class="column"><h3>PROFILE_????? novelardo</h3>
+<center><c>00000</c></center>
+<img src="http://i.imgur.com/imghere.gif" class="left"><b>online alias:</b> <br>
+<b>statistics:</b> average<br><b>age:</b> years old<br><b>ethnic_origins:</b> <br><b>languages:</b> <br><b>reputation:</b> 
+<h4>dress & personal style</h4>
+<h4>background</h4>
+<h4>family background</h4>
+<h4>life events</h4>
+<h4>motivations</h4>
+<h4>statistics</h4>
+<h4>career skills</h4>
+</div>
 </div>
