norvelardo updated info

--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@ since 3 years old, laela has been in the net, learning everything related to it 
 <b>programming:</b> 6<br>
 ∟ the required skill to write programs and to re-program computer systems. a skill of +6-8 are considered to be professionals, who can build operating software, design mainframe systems, and hold down a steady job at your average silicon valley firm.
 </div>
-  <div class="column"><h3>PROFILE_????? novelardo</h3>
-<center><c>00000</c></center>
+  <div class="column"><h3>PROFILE_20691 norvelardo</h3>
+<center><c>20691</c></center>
 <img src="http://i.imgur.com/imghere.gif" class="left"><b>online alias:</b> <br>
-<b>statistics:</b> average<br><b>age:</b> years old<br><b>ethnic_origins:</b> <br><b>languages:</b> <br><b>reputation:</b> 
+<b>statistics:</b> average<br><b>age:</b> 27 years old<br><b>ethnic_origins:</b> <br><b>languages:</b> <br><b>reputation:</b> 
 <h4>dress & personal style</h4>
 <h4>background</h4>
 <h4>family background</h4>
